# cpp-discord-webhook

./: .gitignore  CMakeLists.txt  README.md
src/: discord_webhook.cc  discord_webhook.h  main.cc
